# docs/swagger.json
@@ -46,6 +46,13 @@
                 "summary": "Create User",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authorization header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Create User Request Body",
                         "name": "request",
                         "in": "body",
@@ -70,6 +77,13 @@
                 ],
                 "summary": "Create User",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "User ID",
